# seabird-core

./: .dockerignore  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  Dockerfile-go  Dockerfile-rust  README.md  box.go  build.rs  chat_stream.go  context.go  entrypoint.sh  flake.nix  go.mod  go.sum  impl_chat_ingest.go  impl_seabird.go  irc.go  irc_handler.go  isupport.go  plugin.go  server.go  service.go  stream.go  tracking.go  util.go
.github/workflows/: docker-publish.yml  nix-pr.yml
.sqlx/: query-f948526e3088f4abbc483c9445fd8e0035da4cc1e3f85d9808f073df4e80960e.json
cmd/seabird/: main.go
cmd/seabird-client/: main.go
cmd/seabird-core/: main.go
go/: .dockerignore  Dockerfile  README.md  chat.go  chat_irc.go  go.mod  go.sum  impl_chat_ingest.go  impl_seabird.go  irc_handler.go  server.go  service.go  stream.go  util.go
go/cmd/seabird-core/: main.go
go/ircx/: tracker.go
go/pb/: dummy.go
ircx/: isupport.go  tracker.go
migrations/: 20230807012632_create_auth_tokens_table.down.sql  20230807012632_create_auth_tokens_table.up.sql  20240210085014_create_channels_table.down.sql  20240210085014_create_channels_table.up.sql  20240210091757_create_channel_links_table.down.sql  20240210091757_create_channel_links_table.up.sql  20240210224052_add_auth_token_status.down.sql  20240210224052_add_auth_token_status.up.sql
pb/: dummy.go  seabird.proto
proto/: seabird.proto
rust/: Cargo.toml  README.md  build.rs
rust/src/: id.rs  main.rs  prelude.rs  server.rs
rust/src/irc/: client.rs  isupport.rs  mod.rs  tracker.rs
src/: blocks.rs  db.rs  error.rs  id.rs  main.rs  prelude.rs  proto.rs  server.rs  session.rs  stream.rs  utils.rs  wrapped.rs
src/irc/: client.rs  isupport.rs  tracker.rs
src/server/: auth.rs  grpc.rs  ingest_events.rs  mod.rs
