[package]
name = "seabird-core"
version = "0.1.0"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"

[features]
default = ["rustfmt"]
rustfmt = ["tonic-build/rustfmt"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
hyper = "0.14"
log = "0.4"
percent-encoding = "2.1"
pretty_env_logger = "0.4"
prost = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.5"
tower = "0.4"
tokio = { version = "1.0", features = ["net", "fs", "io-util", "macros", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
