[package]
name = "seabird-core"
version = "0.1.0"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
futures = "0.3"
futures-util = "0.3"
hyper = "0.14"
log = "0.4"
percent-encoding = "2.2"
pretty_env_logger = "0.4"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.8"
tower = "0.4"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.0", features = ["sync"] }
uuid = { version = "1.3", features = ["v4", "fast-rng"] }

[build-dependencies]
tonic-build = { version = "0.8" }
