[package]
name = "seabird-core"
version = "0.1.0"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "0.5"
dotenv = "0.15"
futures = "0.3"
irc = { package = "simple-irc", version = "0.3.1" }
log = "0.4"
notify = "5.0.0-pre.2"
pretty_env_logger = "0.4"
prost = "0.6"
rustls-native-certs = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.2"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "dns", "tcp", "rt-core", "rt-threaded", "stream", "sync", "time"] }
tokio-rustls = { version = "0.13", features = ["dangerous_configuration"] }
tonic = { version = "0.2", features = [] }
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }
