[package]
name = "seabird-core"
version = "0.1.0"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
futures = "0.3"
log = "0.4"
percent-encoding = "2.1"
pretty_env_logger = "0.4"
prost = "0.6"
tonic = "0.2"
tokio = { version = "0.2", features = ["dns", "rt-core", "rt-threaded", "stream", "sync"] }
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }
