[package]
name = "seabird-core"
version = "0.1.0"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
futures = "0.3"
hyper = "0.13"
log = "0.4"
percent-encoding = "2.1"
pretty_env_logger = "0.4"
prost = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.2", git = "https://github.com/hyperium/tonic.git", rev = "327b4fff" }
tower = "0.3"
tokio = { version = "0.2", features = ["dns", "fs", "io-util", "macros", "rt-core", "rt-threaded", "signal", "stream", "sync"] }
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }
